# compute-shader-software-rasterizer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  todo
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  performance_regression.md
.github/workflows/: build-release.yml  docs.yml
docs/: Doxyfile.in  architecture.md  index.md  performance-matrix.md
shaders/: ComputeSoftwareRasterizer.hlsl
src/: DemoApp.cpp  DemoApp.h  SoftwareRasterizerD3D12.cpp  SoftwareRasterizerD3D12.h  main.cpp
